[package]
name = "arraysetcell"
version = "0.1.0"
description = "A fixed-capacity, vector-like array with interior mutability and no ordering guarantees"
authors = ["Markus Mayer"]
repository = "https://github.com/sunsided/arraysetcell"
homepage = "https://github.com/sunsided/arraysetcell"
license = "EUPL-1.2"
categories = ["data-structures"]
keywords = ["interior-mutability", "array", "cell"]
rust-version = "1.68"
edition = "2021"

[dependencies]
default-option-arr = "0.2.0"
